Update TS config to generate JavaScript file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         https://www.chromestatus.com/feature/5365692190687232
         https://caniuse.com/#feat=es6-module
     -->
-    <script src="mathtimatician.ts" type="module"></script>
+    <script src="mathtimatician.js" type="module"></script>
   </head>
   <body>
 </body>
